--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 * {
   margin: 0;
   padding: 0;
+  font-size: 18px;
+  font-family: 'Roboto', sans-serif;
 }
 
 .container {
   display: grid;
   grid-template-columns: 1fr 4fr;
-  height: 100vh;
 }
 
 .sidebar {
@@ -14,7 +15,7 @@
   display: grid;
   grid-template-rows: repeat(3, max-content) 1fr;
   row-gap: 50px;
-  padding: 20px 0px 0 20px;
+  padding: 20px;
   font-weight: bold;
 }
 
@@ -25,10 +26,11 @@
 
 .main-icon,
 .icon {
-  max-height: 20px;
+  max-height: 24px;
 }
+
 .small-user-avatar {
-  max-height: 34px;
+  max-height: 38px;
 }
 
 .icon {
@@ -37,21 +39,20 @@
 
 .logo-icon,
 .user-avatar {
-  max-height: 48px;
-  margin-right: 10px;
+  max-height: 68px;
 }
 
 .sidebar ul,
 .sidebar li {
   list-style-type: none;
   display: grid;
-  grid-template-columns: subgrid;
-  gap: 10px;
+  gap: 20px;
   font-size: 1.2rem;
 }
 
-.logo-container {
-  font-size: 2rem;
+.logo-container p {
+  font-size: 1.5rem;
+  padding-left: 10px;
 }
 
 .sidebar a {
@@ -59,6 +60,12 @@
   align-items: center;
   color: #fff;
   text-decoration: none;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.sidebar a:hover {
+  transform: translateY(-3px);
 }
 
 header {
@@ -66,6 +73,7 @@ header {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   background-color: #fff;
+  padding: 20px 0;
 }
 
 .search-and-profile {
@@ -138,15 +146,22 @@ button {
   border: none;
   border-radius: 20px;
   padding: 8px 32px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+button:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
 }
 
 .content {
   background-color: #e2e8f0;
   display: grid;
   grid-template-columns: 2fr 1fr;
-  gap: 20px;
-  padding: 20px 48px 68px 20px;
+  gap: 40px;
+  padding: 48px 48px 68px 20px;
 }
 
 .projects {
@@ -162,21 +177,57 @@ h2 {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  gap: 15px;
-  height: 100vh;
+  gap: 20px;
 }
 
 .project-card {
-  box-shadow: #e2e8f0;
   display: flex;
   flex-direction: column;
+  justify-content: start;
+  border-left: 10px solid #f0b429;
+  padding: 20px;
+}
+
+h3 {
+  font-size: 1.3rem;
+}
+
+.project-card span {
+  display: flex;
+  gap: 20px;
+  margin-top: 20px;
+  align-self: end;
+  margin-right: 20px;
+}
+
+.project-card span img:hover {
+  transform: scale(1.5, 1.5);
+}
+
+.announcements-group,
+.trending-group {
+  display: grid;
+  gap: 20px;
+  padding: 40px;
+}
+
+.trend {
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr 4fr;
+  align-items: center;
+}
+
+.trending-group p,
+.announcements-group p,
+.project-card p {
+  color: gray;
 }
 
 .project-card,
-.announcements,
-.trending {
+.announcements-group,
+.trending-group {
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
-  border: 1px solid black;
   border-radius: 12px;
-  padding: 40px 20px;
+  background-color: #fff;
 }
